# maxcutevo

./: .gitignore  CMakeLists.txt  README.md  config.json  fsoc.sh
data/: test.mtx  test02.mtx
src/: CMakeLists.txt  main.py  notes.txt  remove_header.zsh
src/cpp/: ActivityAlgorithm.cpp  ActivityAlgorithm.hpp  ActivityDeterministicAlgorithm.cpp  AdjList.cpp  AdjList.hpp  Algorithm.cpp  Algorithm.h  Algorithm.hpp  AlgorithmFactory.cpp  AlgorithmFactory.hpp  AnnealingAlgorithm.cpp  AnnealingAlgorithm.hpp  Batch.cpp  Batch.hpp  Benchmark.cpp  Benchmark.h  Benchmark.hpp  CMakeLists.txt  FMUTAlgorithm.cpp  FMUTAlgorithm.hpp  Graph.cpp  Graph.hpp  GreedyActivityAlgorithm.hpp  GreedyAlgorithm.cpp  GreedyAlgorithm.hpp  GreedyPMUTAlgorithm.cpp  GreedyPMUTAlgorithm.hpp  MathHelper.cpp  MathHelper.hpp  PMUTAlgorithm.cpp  PMUTAlgorithm.hpp  Runner.cpp  Runner.h  Runner.hpp  UnifActivityAlgorithm.cpp  UnifAlgorithm.cpp  UnifAlgorithm.hpp  main.cpp  types.h  types.hpp
src/cpp/algorithm/: ActivityAlgorithm.cpp  ActivityAlgorithm.hpp  Algorithm.cpp  Algorithm.hpp  FMUT.cpp  FMUT.hpp  Greedy.cpp  Greedy.hpp  GreedyActivity.cpp  GreedyActivity.hpp  GreedyAlgorithm.cpp  GreedyAlgorithm.hpp  GreedySigmoid.cpp  GreedySigmoid.hpp  PMUT.cpp  PMUT.hpp  PMUTActivity.cpp  PMUTActivity.hpp  PMUTAlgorithm.hpp  Random.cpp  Random.hpp  Unif.cpp  Unif.hpp  UnifAlgorithm.hpp  UnifSigmoid.cpp  UnifSigmoid.hpp
src/cpp/deprecated_algorithm/: ActivityDeterministicAlgorithm.cpp  ActivityDeterministicAlgorithm.hpp  AnnealingAlgorithm.hpp  GreedyActivityAlgorithm.cpp  GreedyActivityAlgorithm.hpp  GreedyPMUTAlgorithm.cpp  GreedyPMUTAlgorithm.hpp  UnifActivityAlgorithm.hpp
src/python/: PriorityItem.py  RandomAccessPriorityQueue.py  algorithm.py  batch.py  cnf_converter.py  config_reader.py  dir_batcher.py  erdos_renyi_generator.py  graph.py  logger.py  main.py  plotter.py  power_law_test.py  powerlaw_test.py  run_and_show.py  runner.py
src/script/: batcher.sh  cnf_batch_converter.sh  configscript.py  csv_plotter.py  fsoc-array-runner.sh  fsoc-array.sh  fsoc-simple.sh  fsoc.sh  run_generator.py
src/test/: CMakeLists.txt  MathHelperTest.cpp
(+23 files in other folders)
